# aliexpress

./: .gitignore  Dockerfile  README.md  cloudflare_uploader.py  config.py  db.py  docker-compose.yml  exporter.py  image_downloader.py  main.py  pyproject.toml  requirements.txt  run.py  scraper.py
config/: categories.yaml
salamgcc/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  store_data.py
salamgcc/config/: broker_listing_urls.json  dealers.yaml
salamgcc/scripts/: check_images.py  scrape.py  scrape_and_store_brokers.py  scrape_bytbil_dealers.py  scrape_erikolsson_homes.py  test_blocket.py  test_blocket_output.json
salamgcc/src/ad_extractor/: __init__.py  __main__.py  cli.py
salamgcc/src/ad_extractor/config/: __init__.py  brokers.py  dealers.py  settings.py
salamgcc/src/ad_extractor/database/: __init__.py  mongodb.py
salamgcc/src/ad_extractor/proxy/: __init__.py  manager.py
salamgcc/src/ad_extractor/scrapers/: __init__.py  base.py  blocket.py  erikolsson_ad_listings_data.py  erikolsson_borkers_ad_listings.py
salamgcc/src/ad_extractor/translation/: __init__.py  dictionaries.py  service.py
salamgcc/src/ad_extractor/utils/: __init__.py  helpers.py
src/ali_scraper/: __init__.py  __main__.py  api.py  cli.py
src/ali_scraper/cloudflare/: __init__.py  uploader.py
src/ali_scraper/config/: __init__.py  categories.py  settings.py
src/ali_scraper/database/: __init__.py  mongodb.py
src/ali_scraper/export/: __init__.py  data.py  images.py
src/ali_scraper/scrapers/: __init__.py  aliexpress.py  base.py
src/ali_scraper/utils/: __init__.py  helpers.py
tests/: test_exporter.py  test_image_downloader.py  test_scraper.py
